// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/conversations/demo/basic.tsx correctly 1`] = `
<ul
  class="ant-conversations"
  style="width:256px;background:#ffffff;border-radius:6px"
>
  <li
    class="ant-conversations-item ant-conversations-item-active"
  >
    <span
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
    >
      Conversation Item 1
    </span>
  </li>
  <li
    class="ant-conversations-item"
  >
    <span
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
    >
      Conversation Item 2
    </span>
  </li>
  <li
    class="ant-conversations-item"
  >
    <span
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
    >
      Conversation Item 3
    </span>
  </li>
  <li
    class="ant-conversations-item ant-conversations-item-disabled"
  >
    <span
      class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
    >
      Conversation Item 4
    </span>
  </li>
</ul>
`;

exports[`renders components/conversations/demo/controlled-mode.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-align-flex-start ant-flex-gap-small ant-flex-vertical"
>
  <ul
    class="ant-conversations"
    style="width:256px;background:#ffffff;border-radius:6px"
  >
    <li
      class="ant-conversations-item ant-conversations-item-active"
    >
      <span
        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
      >
        Conversation Item 1
      </span>
    </li>
    <li
      class="ant-conversations-item"
    >
      <span
        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
      >
        Conversation Item 2
      </span>
    </li>
    <li
      class="ant-conversations-item"
    >
      <span
        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
      >
        Conversation Item 3
      </span>
    </li>
  </ul>
  <div
    class="ant-flex ant-flex-gap-small"
  >
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Active First
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Active Last
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/conversations/demo/group.tsx correctly 1`] = `
<ul
  class="ant-conversations"
  style="width:256px;background:#ffffff;border-radius:6px"
>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography"
      >
        Group1
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item ant-conversations-item-active"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation Item 1
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation Item 2
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation Item 3
        </span>
      </li>
    </ul>
  </li>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography"
      >
        Group2
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item ant-conversations-item-disabled"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation Item 4
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders components/conversations/demo/group-sort.tsx correctly 1`] = `
<ul
  class="ant-conversations"
  style="width:256px;background:#ffffff;border-radius:6px"
>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              aria-label="comment"
              class="anticon anticon-comment"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="comment"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M573 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40zm-280 0c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                />
                <path
                  d="M894 345a343.92 343.92 0 00-189-130v.1c-17.1-19-36.4-36.5-58-52.1-163.7-119-393.5-82.7-513 81-96.3 133-92.2 311.9 6 439l.8 132.6c0 3.2.5 6.4 1.5 9.4a31.95 31.95 0 0040.1 20.9L309 806c33.5 11.9 68.1 18.7 102.5 20.6l-.5.4c89.1 64.9 205.9 84.4 313 49l127.1 41.4c3.2 1 6.5 1.6 9.9 1.6 17.7 0 32-14.3 32-32V753c88.1-119.6 90.4-284.9 1-408zM323 735l-12-5-99 31-1-104-8-9c-84.6-103.2-90.2-251.9-11-361 96.4-132.2 281.2-161.4 413-66 132.2 96.1 161.5 280.6 66 412-80.1 109.9-223.5 150.5-348 102zm505-17l-8 10 1 104-98-33-12 5c-56 20.8-115.7 22.5-171 7l-.2-.1A367.31 367.31 0 00729 676c76.4-105.3 88.8-237.6 44.4-350.4l.6.4c23 16.5 44.1 37.1 62 62 72.6 99.6 68.5 235.2-8 330z"
                />
                <path
                  d="M433 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              Today
            </span>
          </div>
        </div>
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation 1732204800000
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation 1732204803600
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation 1732204807200
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation 1732204810800
        </span>
      </li>
    </ul>
  </li>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              aria-label="comment"
              class="anticon anticon-comment"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="comment"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M573 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40zm-280 0c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                />
                <path
                  d="M894 345a343.92 343.92 0 00-189-130v.1c-17.1-19-36.4-36.5-58-52.1-163.7-119-393.5-82.7-513 81-96.3 133-92.2 311.9 6 439l.8 132.6c0 3.2.5 6.4 1.5 9.4a31.95 31.95 0 0040.1 20.9L309 806c33.5 11.9 68.1 18.7 102.5 20.6l-.5.4c89.1 64.9 205.9 84.4 313 49l127.1 41.4c3.2 1 6.5 1.6 9.9 1.6 17.7 0 32-14.3 32-32V753c88.1-119.6 90.4-284.9 1-408zM323 735l-12-5-99 31-1-104-8-9c-84.6-103.2-90.2-251.9-11-361 96.4-132.2 281.2-161.4 413-66 132.2 96.1 161.5 280.6 66 412-80.1 109.9-223.5 150.5-348 102zm505-17l-8 10 1 104-98-33-12 5c-56 20.8-115.7 22.5-171 7l-.2-.1A367.31 367.31 0 00729 676c76.4-105.3 88.8-237.6 44.4-350.4l.6.4c23 16.5 44.1 37.1 62 62 72.6 99.6 68.5 235.2-8 330z"
                />
                <path
                  d="M433 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              Yesterday
            </span>
          </div>
        </div>
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation 1732204728000
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
        >
          Conversation 1732204731600
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders components/conversations/demo/infinite-load.tsx correctly 1`] = `
<div
  id="scrollableDiv"
  style="width:280px;height:600px;background:#ffffff;border-radius:6px;overflow:scroll"
>
  <div
    class="infinite-scroll-component__outerdiv"
  >
    <div
      class="infinite-scroll-component "
      style="height:auto;overflow:auto;-webkit-overflow-scrolling:touch"
    >
      <ul
        class="ant-conversations"
      />
      <div
        style="text-align:center"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-sm ant-spin-spinning"
        >
          <span
            aria-label="redo"
            class="anticon anticon-redo anticon-spin ant-spin-dot"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="redo"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/conversations/demo/with-menu.tsx correctly 1`] = `
<div
  class="ant-app"
>
  <ul
    class="ant-conversations"
    style="width:256px;background:#ffffff;border-radius:6px"
  >
    <li
      class="ant-conversations-item ant-conversations-item-active"
    >
      <span
        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
      >
        Conversation Item 1
      </span>
      <span
        aria-label="ellipsis"
        class="anticon anticon-ellipsis ant-dropdown-trigger ant-conversations-menu-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
    </li>
    <li
      class="ant-conversations-item"
    >
      <span
        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
      >
        Conversation Item 2
      </span>
      <span
        aria-label="ellipsis"
        class="anticon anticon-ellipsis ant-dropdown-trigger ant-conversations-menu-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
    </li>
    <li
      class="ant-conversations-item"
    >
      <span
        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
      >
        Conversation Item 3
      </span>
      <span
        aria-label="ellipsis"
        class="anticon anticon-ellipsis ant-dropdown-trigger ant-conversations-menu-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
    </li>
    <li
      class="ant-conversations-item ant-conversations-item-disabled"
    >
      <span
        class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line ant-conversations-label"
      >
        Conversation Item 4
      </span>
    </li>
  </ul>
</div>
`;
